# crewai_youtube

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
src/youtube/: crew.py  main.py
src/youtube/config/: agents.yaml  tasks.yaml
src/youtube/tools/: config.yaml  custom_tool.py  tools.py  types.py
