[project]
name = "youtube"
version = "0.1.0"
description = "youtube using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "firecrawl-py>=1.7.0",
    "google-generativeai>=0.8.3",
    "requests>=2.32.3",
    "youtube-transcript-api>=0.6.3",
]

[project.scripts]
youtube = "youtube.main:run"
run_crew = "youtube.main:run"
train = "youtube.main:train"
replay = "youtube.main:replay"
test = "youtube.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
